--- a/src/less/splash-screen/index.less
+++ b/src/less/splash-screen/index.less
@@ -8,48 +8,83 @@
   background-color: #8BB9F0;
   box-sizing: content-box;
 
+
   .logo {
-    @width: 237px;
-    width: @width;
-    height: 252px;
-    display: block;
-    position: absolute;
-    top: 80px;
-    left: 50%;
-    margin-left: -(@width / 2);
-    background-image: url('/images/pirate_logo.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
+    margin-top: 80px;
+    margin-bottom: 10px;
+    text-align: center;
+    img {
+      width: 50%;
+      max-width: 200px;
+    }
   }
 
   .logo-text {
-    @width: 341px;
-    @height: 143px;
-    width: @width;
-    height: @height;
-    display: block;
-    position: absolute;
-    top: 350px;
-    left: 50%;
-    margin-left: -(@width / 2);
-    background-image: url('/images/under_treasure_logo.png');
+    text-align: center;
+    img {
+        @width: 100%;
+        width: @width;
+        max-width: 300px;
+    }
   }
-
-  button {
-    @width: 200px;
-    background: transparent;
-    font-size: 3rem;
-    font-weight: 300;
-    color: white;
-    padding: 10px 30px;
-    border: 4px solid white;
-    cursor: hand;
-    margin-top:20px;
-    position: absolute;
-    left: 50%;
-    top: 500px;
-    width: @width;
-    margin-left: -(@width / 2);
-  }
+    button {
+      @width: 200px;
+      background: transparent;
+      font-size: 3rem;
+      color: white;
+      padding: 10px 30px;
+      border: 4px solid white;
+      cursor: hand;
+      margin-top:20px;
+      position: absolute;
+      left: 50%;
+      bottom: 50px;
+      width: @width;
+      margin-left: -(@width / 2);
+    }
 }
+
+//  .logo {
+//    @width: 100%;
+//    width: @width;
+//    max-width: 200px;
+//    display: block;
+//    position: absolute;
+//    top: 80px;
+//    left: 50%;
+//    //margin-left: -(@width / 2);
+//    background-image: url('/images/pirate_logo.png');
+//    background-size: 100%;
+//    background-repeat: no-repeat;
+//  }
+//
+//  .logo-text {
+//    @width: 100%;
+//    width: @width;
+//    max-width: 300px;
+//    display: block;
+//    position: absolute;
+//    top: 350px;
+//    left: 50%;
+//    //margin-left: -(@width / 2);
+//    background-image: url('/images/under_treasure_logo.png');
+//  }
+//
+//  button {
+//    @width: 200px;
+//    background: transparent;
+//    font-size: 3rem;
+//    font-weight: 300;
+//    color: white;
+//    padding: 10px 30px;
+//    border: 4px solid white;
+//    cursor: hand;
+//    margin-top:20px;
+//    position: absolute;
+//    left: 50%;
+//    top: 500px;
+//    width: @width;
+//    margin-left: -(@width / 2);
+//  }
+//}
 
